// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blocks should render correctly 1`] = `
Array [
  <headline
    blocks={
      Array [
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "model": Object {
                  "blocks": Array [
                    Object {
                      "id": null,
                      "model": Object {
                        "attributes": Array [],
                        "text": "This is a headline!",
                      },
                      "type": "fragment",
                    },
                  ],
                  "text": "This is a headline!",
                },
                "type": "paragraph",
              },
            ],
          },
          "type": "text",
        },
      ]
    }
    type="headline"
  />,
  <subheadline
    blocks={
      Array [
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "model": Object {
                  "blocks": Array [
                    Object {
                      "id": null,
                      "model": Object {
                        "attributes": Array [],
                        "text": "This is a subheadline!",
                      },
                      "type": "fragment",
                    },
                  ],
                  "text": "This is a subheadline!",
                },
                "type": "paragraph",
              },
            ],
          },
          "type": "text",
        },
      ]
    }
    type="subheadline"
    typeOfPreviousBlock="headline"
  />,
  <text
    blocks={
      Array [
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "id": null,
                "model": Object {
                  "attributes": Array [],
                  "text": "This is some text content!",
                },
                "type": "fragment",
              },
            ],
            "text": "This is some text content!",
          },
          "type": "paragraph",
        },
      ]
    }
    type="text"
    typeOfPreviousBlock="subheadline"
  />,
]
`;

exports[`Blocks with mixed set of known and unknown blocks should render known blocks; unknown blocks rendered null 1`] = `
Array [
  <headline
    blocks={
      Array [
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "model": Object {
                  "blocks": Array [
                    Object {
                      "id": null,
                      "model": Object {
                        "attributes": Array [],
                        "text": "This is a headline!",
                      },
                      "type": "fragment",
                    },
                  ],
                  "text": "This is a headline!",
                },
                "type": "paragraph",
              },
            ],
          },
          "type": "text",
        },
      ]
    }
    type="headline"
  />,
  <subheadline
    blocks={
      Array [
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "model": Object {
                  "blocks": Array [
                    Object {
                      "id": null,
                      "model": Object {
                        "attributes": Array [],
                        "text": "This is a subheadline!",
                      },
                      "type": "fragment",
                    },
                  ],
                  "text": "This is a subheadline!",
                },
                "type": "paragraph",
              },
            ],
          },
          "type": "text",
        },
      ]
    }
    type="subheadline"
    typeOfPreviousBlock="headline"
  />,
  <text
    blocks={
      Array [
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "id": null,
                "model": Object {
                  "attributes": Array [],
                  "text": "This is some text content!",
                },
                "type": "fragment",
              },
            ],
            "text": "This is some text content!",
          },
          "type": "paragraph",
        },
      ]
    }
    type="text"
    typeOfPreviousBlock="subheadline"
  />,
  null,
  null,
]
`;

exports[`Blocks with unknown blocks should render correctly as null 1`] = `
Array [
  null,
  null,
]
`;
